<resources>
    <string name="app_name">profile_screen</string>
    <string name="person_name">Mostafa Ahmed </string>
    <string name="descrabtion">"Mobile app developer specializing in creating innovative and efficient apps for iOS and Android using the latest technologies."</string>
    <string name="age">Age </string>
    <string name="job">Job </string>
    <string name="address">Address </string>
    <string name="age_value">20 </string>
    <string name="job_value">SoftWare Engineer </string>
    <string name="address_value">Cairo Egypt </string>
    <string name="bt1">Face Book </string>
    <string name="bt2">LinkedIn </string>
    <string name="bt3">WhatsApp </string>
</resources>